--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "doctor-website": "file:",
+    "lottie-web": "^5.12.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.4",
